# USC-AED-AmongETSE

./: .gitignore  README.md
among/: CMakeLists.txt  ConstantesAmongETSE.h  abb.c  (+9 more)
tablas/: CMakeLists.txt  Informe.docx  LEEME.txt  lista.c  lista.h  main_encadenamiento.c  main_recolocacion.c  tabla_hash_encadenamiento.c  tabla_hash_encadenamiento.h  tablas_hash_recolocacion.c  tablas_hash_recolocacion.h  utils.c  utils.h  vars.h  ~$nforme.docx  ~WRL1172.tmp
tablas/colisiones/encadenamiento/: busqueda.csv
tablas/colisiones/encadenamiento/hash1/: 10001.csv
tablas/colisiones/encadenamiento/hash1/correo/: 1000.csv  10001.csv  1001.csv
tablas/colisiones/encadenamiento/hash2/: 1000.csv  10000.csv  10001.csv  1001.csv
tablas/colisiones/encadenamiento/hash3/k227/: 1000.csv  10000.csv  10001.csv  1001.csv
tablas/colisiones/encadenamiento/hash3/k500/: 1000.csv  10000.csv  10001.csv  1001.csv
tablas/colisiones/recolocacion/cuadratica/hash2/: 15001.csv
tablas/numelementos/: busqueda.xlsx
tablas/numelementos/encadenamiento/hash1/: 10001.csv
tablas/numelementos/encadenamiento/hash1/correo/: 1000.csv  10001.csv  1001.csv
tablas/numelementos/encadenamiento/hash2/: 1000.csv  10000.csv  10001.csv  1001.csv
tablas/numelementos/encadenamiento/hash3/k227/: 1000.csv  10000.csv  10001.csv  1001.csv
tablas/numelementos/encadenamiento/hash3/k500/: 1000.csv  10000.csv  10001.csv  1001.csv
tablas/numelementos/recolocacion/cuadratica/: busqueda.csv
tablas/numelementos/recolocacion/cuadratica/hash2/: 15001.csv
tablas/numelementos/recolocacion/lineal/: busqueda.csv
(+71 files in other folders)
